# whale-app

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DISTRIBUTION.md  HOPPER_INVESTIGATION.md  appcast.xml  config.py  distribute.sh  index.js  llm.py  main.py  output.py  project.yml  pyproject.toml  recorder.py  requirements.txt  server.spec  transcriber.py
Plans/: overview.md  step-01-foundation.md  step-02-audio-recording.md  step-03-transcription.md  step-04-llm-cleanup.md  step-05-output.md  step-06-hotkey-integration.md
Spec/macos-meeting-transcriber/: spec.md
Spec/v1-standalone-macos-app/: spec.md
TranscribeMeeting/: Info.plist
TranscribeMeeting/Sources/: AppState.swift  AudioRecorder.swift  GeneralSettingsView.swift  HotkeyManager.swift  KeyRecorderView.swift  MenuBarView.swift  ModelSettingsView.swift  OnboardingView.swift  PTTRecorderView.swift  PermissionsSettingsView.swift  PythonServer.swift  SettingsStore.swift  SettingsView.swift  ShortcutsSettingsView.swift
Whale/: Info.plist  TranscribeMeeting.entitlements
Whale.xcodeproj/: project.pbxproj
Whale/Sources/: AISettingsView.swift  AppRuntimeInfo.swift  (+20 more)
WhaleTests/: LocalLLMCleanupStageTests.swift  PromptBuilderTests.swift  TextInsertionManagerTests.swift  TranscriptionModelTests.swift  TranscriptionPipelineTests.swift  VoiceActivityTests.swift
scripts/: build_server_binary.sh
server/: server.py  transcriber.py
tasks/: step-01-foundation.md  step-02-audio-recording.md  step-03-transcription.md  step-04-llm-cleanup.md  step-05-output.md  step-06-hotkey-integration.md
v2/: NOTES.md
(+15 files in other folders)
