[project]
name = "transcribe-meetings"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.86.0",
    "fastapi>=0.135.1",
    "mlx-audio>=0.1.0",
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "pynput>=1.8.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.42.0",
]
